feat: added a new project
added a todo app to the project component

BREAKING CHANGE: added a todo app

--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -27,6 +27,7 @@
 .projectCardScreenShot {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 80%;
   margin-inline: 10%;
   flex: 1;
@@ -35,6 +36,7 @@
 .projectCardScreenShot img {
   width: 100%;
   max-height: 6.25rem;
+  object-fit: contain;
   /* height: 30%; */
 }
 
