--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -17,7 +17,7 @@
 
 .NavBarMain {
   justify-content: space-between;
-  min-width: 26rem;
+  gap: 1rem;
   list-style-type: none;
 }
 
@@ -31,4 +31,26 @@
 .NavBarActiveLink {
   color: var(--TickleMePink);
   border-bottom: 0.25rem solid var(--TickleMePink);
+}
+
+@media all and (max-width: 530px) {
+  .NavBar {
+    width: 95%;
+    margin-bottom: 6rem;
+    justify-content: center;
+  }
+  
+  
+
+  .NavBarMain {
+    position: absolute;
+    top: 3rem;
+    font-size: 0.9rem;
+    display: grid;
+    width: 75%;
+    margin: 0 10%;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-rows: 1fr 1fr; */
+    gap: 0;
+  }  
 }
