--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -1,12 +1,14 @@
 .projectCardContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(40ch, 1fr));
   justify-items: center;
   gap: 1rem;
   margin: 2rem 0;
+  width: 100%;
 }
 
 .projectCard {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
