--- a/src/pages/Tools/tools.css
+++ b/src/pages/Tools/tools.css
@@ -7,4 +7,14 @@
 .toolsIconTile {
   display: flex;
   align-items: center;
+  transition: transform 250ms;
+}
+
+.toolsIconTile:hover {
+  cursor: pointer;
+  transform: translateY(-0.75rem);
+}
+
+.toolsIconTile a {
+  color: var(--Snow);
 }
