style(index.css): added a media query to the CSS class `pageHeader1`

--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,10 @@ a {
     font-size: 4rem;
   }
 }
+
+@media all and (max-width: 530px) {
+  .pageHeader1 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+}
