--- a/src/components/Quote/quote.css
+++ b/src/components/Quote/quote.css
@@ -7,6 +7,7 @@
 .QuoteContainer figure {
   border-radius: 0.35rem;
   border: 0.125rem solid var(--Snow);
+  padding: 1rem 0;
 }
 
 .QuoteContainer blockquote {
