--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -1,7 +1,23 @@
 .projectCardContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem 0;
+  width: 100%;
+}
+
+.projectSectionContainer {
+  padding: 1rem 0;
+}
+
+.projectSectionTitle {
+  font-size: 2rem;
+  text-align: center;
+}
+
+.projectSectionGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(40ch, 1fr));
-  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(41ch, 1fr));
   gap: 1rem;
   margin: 2rem 0;
   width: 100%;
@@ -9,6 +25,7 @@
 
 .projectCard {
   width: 100%;
+  max-width: 41ch;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -17,13 +34,6 @@
   padding: 1.5rem 0.75rem;
   text-align: center;
   gap: 1rem;
-  /* transition: outline-offset 250ms ease; */
-}
-
-.projectCard:hover,
-.projectCard:focus {
-  /* outline: 0.25rem solid var(--Snow);
-  outline-offset: 0.5rem; */
 }
 
 .projectCardScreenShot {
