--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,32 +1,46 @@
 .homePageSection {
   height: 85vh;
   display: flex;
-  justify-content: flex-start;
+  /* flex-direction: column; */
   align-items: center;
 }
 
 .homeTextContainer {
   flex: 1;
+  max-width: 70%;
+  margin-inline: auto;
+  text-align: center;
 }
 
-.animationContainer {
-  flex: 1;
-  height: 100%;
-  /* background-color: aqua; */
+.title {
+  font-size: calc(4rem + 1vw);
 }
 
-.revealBox {
-  position: relative;
-  overflow: hidden;
-  height: 1.5rem;
+.subTitle {
+  font-size: calc(1.25rem + 1vw);
 }
 
-.revealBoxItem {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: -2;
-  /* text-align: center; */
+.title,
+.subTitle {
+  margin-bottom: 1rem;
 }
 
+@media all and (max-width: 530px) {
+  .homeTextContainer {
+    max-width: 90%;
+    margin-inline: auto;
+  }
+
+  .title {
+    font-size: calc(3.25rem + 1vw);
+  }
+
+  .subTitle {
+    font-size: calc(1.1rem + 1vw);
+  }
+
+  .title,
+  .subTitle {
+    margin-bottom: 1.25rem;
+  }
+}
