--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -2,7 +2,8 @@
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
-  gap: 1rem;
+  column-gap: 1rem;
+  row-gap: 2rem;
   margin: 2rem 0;
 }
 
