--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -49,7 +49,6 @@
   width: 100%;
   max-height: 6.25rem;
   object-fit: contain;
-  /* height: 30%; */
 }
 
 .projectCardInfo {
@@ -71,11 +70,13 @@
   color: var(--TickleMePink);
 }
 
-.projectCardInfoDescription {
-  /* margin: 0.25rem 0 ; */
-}
-
 .projectCardButtonsContainer {
   display: flex;
   justify-content: space-between;
+}
+
+@media all and (max-width: 1265px) {
+  .projectSectionGrid {
+    justify-items: center;
+  }
 }
